--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <ActionBar>
     <Label text="Home"></Label>
 </ActionBar>
-
 <GridLayout>
+<ns-profile-editor></ns-profile-editor>
     <!-- Add your page content here -->
 </GridLayout>
