more form functions

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,9 @@
+<!--
 <ActionBar>
-    <Label text="Home"></Label>
+    <Label text="MaxLift Mini"></Label>
 </ActionBar>
-<GridLayout>
+-->
+<GridLayout style="background-color:white;">
 <ns-profile-editor></ns-profile-editor>
     <!-- Add your page content here -->
 </GridLayout>
